# makesweet

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE.md  README  README.md
blender/: check_generator.py  cube3.blend  cube3.swf
src/: CMakeLists.txt  Dbg.h  Filer.cpp  Filer.h  GifAnim.cpp  GifAnim.h  Input.cpp  Input.h  Inputs.h  Mapping.cpp  Mapping.h  Pixer.h  Prop.cpp  Prop.h  Render.cpp  Render.h  Renders.cpp  Renders.h  Repository.cpp  Repository.h  VidAnim.cpp  VidAnim.h  anim_thumb.cpp  dither.cpp  frame.proto  gd_mod.h  gd_topal.c  msmap.c  msmap.h  nonblend.cpp  reanimator.cpp  reblend.cpp
